<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/standard_view_title" >
  <Button
        android:id="@+id/standard_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/standard_view_title" />
    <Button
        android:id="@+id/custom_view_with_explore_by_touch_helper_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_with_explore_by_touch_helper_title" />
    <Button
        android:id="@+id/custom_view_with_accessibility_node_provider_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_view_with_accessibility_node_provider_title" />
    <Button
      android:id="@+id/custom_view_best_practice_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/custom_view_best_practice_title" />
    <Button
        android:id="@+id/web_view_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_view_title" />
</LinearLayout>
</FrameLayout>